Replaced calls to constructors with more efficient valueOf() calls to remove static analyzer warning about improper use of constructors
Issue-ID: SO-1841
Signed-off-by: Oleksandr Moliavko <o.moliavko@samsung.com>
Change-Id: If4c176f5a3bd681e20ff7da9828e920f70762259